--- a/web-server/react-app/src/css/createListing.css
+++ b/web-server/react-app/src/css/createListing.css
@@ -3,19 +3,19 @@
     width : 50%;
     height: 3%;
     float: left;
+    margin-left: 20%;
 }
 
 .searchBar{
     border-radius: 10px;
     text-align: center;
     width: 100%;
-    margin-left: 20%;
     background-color: #8133FF;
     padding-bottom: 3%;
 }
 
 .suggestions {
-    margin-left: 22%;
+    margin-left: 30%;
 }
 
 .suggestion {
@@ -26,3 +26,39 @@
     background-color: gainsboro;
 }
 
+.searchAddressTitle{
+    color: #FB6A59;
+    margin-left: 8%;
+    margin-top: 2%;
+}
+
+.inputFormDiv{
+    background-color: lightslategray;
+    text-align: center;
+    float: left;
+    margin: 1%;
+    padding: 1%;
+    border-radius: 7px;
+    width: 18%;
+}
+
+.inputFormDes{
+    color: white;
+}
+
+.listingFormInfo{
+    text-align: center;
+    margin-bottom: 2%;
+    padding: 2%;
+}
+
+.listingFormInfo2{
+    margin-top: 1%;
+    width: 50%;
+    text-align: center;
+}
+
+.createListingMessage{
+    color: red;
+    size: 15px;
+}
